--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ a:focus {
 
 .dropdown-menu {
   margin-top: -1px;
-  min-width: 256px;
+  min-width:384px;
 }
 
 .center h2{
@@ -169,7 +169,9 @@ body > section {
   }
 }
 
-
+.alternate{
+ background-color: #eee;
+}
 /*************************
 *******Header******
 **************************/
@@ -275,8 +277,8 @@ input.search-form:hover {
  }
 
 .navbar-nav>li{
-  margin-left: 35px;
-  padding-bottom: 28px;
+  margin-left: 25px;
+  padding-bottom: 10px;
 }
 
 .navbar-inverse .navbar-nav > li > a {
@@ -344,7 +346,7 @@ input.search-form:hover {
 }
 
 .navbar-inverse .navbar-nav .dropdown-menu > li:last-child > a {
-  border-radius: 0 0 3px 3px;
+  border-radius: 0 0 0px 0px;
 }
 
 .navbar-inverse .navbar-nav .dropdown-menu > li.divider {
@@ -977,7 +979,8 @@ a.accordion-toggle  i{
 .partners ul li{
   display: inline-block;
   float: center;
-  width: 20%;
+  width: 17%;
+    margin: 10px;
 }
 
 #conatcat-info{
@@ -1014,6 +1017,13 @@ a.accordion-toggle  i{
   margin-bottom: -110px;
 }
 
+#about-us h1{
+    color: #4e4e4e;
+    font-size: 50px;
+    font-weight: 600;
+
+}
+
 .about-us h2, 
 .skill_text h2 {
   color:#4e4e4e;
@@ -1021,6 +1031,9 @@ a.accordion-toggle  i{
   font-weight: 600;
 }
 
+#about-us h2{
+ font-size:30px;
+}
 .about-us p {
   color:#4e4e4e;
 }
