--- a/css/main.css
+++ b/css/main.css
@@ -1041,6 +1041,10 @@ a.accordion-toggle  i{
   color:#4e4e4e;
 }
 
+#clients{
+ background: #f5f5f5;
+}
+
 #carousel-slider {
   position: relative;
 }
