--- a/css/main.css
+++ b/css/main.css
@@ -1560,6 +1560,89 @@ ul.social_icons li  a i{
   margin-top: 15px;
 }
 
+/************************
+********* What We Do CSS *****
+*************************/
+#Portfolio h1{
+    color: #4e4e4e;
+    font-size: 50px;
+    font-weight: 600;
+padding-bottom: 30px;
+    text-align: center;
+}
+
+#Portfolio h2{
+ text-align: center;
+    font-size: 35px;
+}
+
+#Portfolio p{
+ text-align: center;
+}
+
+#Portfolio .pointer {
+ padding-bottom: 5px;
+    text-align: left;
+}
+
+#Summary {
+    background: #f5f5f5;
+}
+
+.solution-icon{
+ width: 96px;
+    height: auto;
+    margin: 30px;
+}
+
+.tab-buttons > li {
+  display: inline-block;
+}
+
+.tab-buttons > li a {
+  background: none repeat scroll 0 0 #FFFFFF;
+  font-size: 14px;
+  font-weight: 400;
+  margin-right: 20px;
+  text-transform: uppercase;
+  transition: all 0.9s ease 0s;
+  -moz-transition: all 0.9s ease 0s;
+  -webkit-transition: all 0.9s ease 0s;
+  -o-transition: all 0.9s ease 0s;
+  border: 1px solid #F2F2F2;
+  outline: none;
+  border-radius: 3px;
+}
+
+.tab-buttons > li a:hover,
+.tab-buttons > li a.active{
+  color:#fff;
+  background: #c52d2f;
+  border: 1px solid #c52d2f;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+.tab-content,
+.tab-buttons {
+  list-style: none outside none;
+  margin: 0 0 40px 0;
+  padding: 0;
+}
+
+.tab-content > li {
+  float: left;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.tab-content {
+  margin: 0;
+  padding:0;
+}
+
 /*************************
 ********* Portfolio CSS ******
 **************************/
