--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,6 +43,9 @@
     padding: 15px;
   }
 
+    #partner .services-wrap {
+     padding: 30px 30px;
+    }
   .services-wrap {
     padding: 40px 10px 40px 30px;
   }
