--- a/css/main.css
+++ b/css/main.css
@@ -1083,9 +1083,8 @@ a.accordion-toggle  i{
     margin: 10px;
 }
 
-#conatcat-info{
-  background: #fff url(../images/contact.png) no-repeat 90% 0;
-  padding: 30px 0;
+#contact-info{
+  background: #f5f5f5; 
 }
 
 .contact-info i{
@@ -1096,7 +1095,7 @@ a.accordion-toggle  i{
   color: #fff;
   background: #000;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 10px; 
 }
 
 .contact-info h2{
@@ -1104,10 +1103,20 @@ a.accordion-toggle  i{
   color: #000;
 }
 
-.contact-info{
-  color:#000;
+#contact-page {
+  margin-top: 30px;   
 }
 
+#contact_title{
+ background-image: url("../images/contact_edited.jpg");
+    background-size: cover;
+}
+
+#contact_title h1{
+ color: #fff;
+    font-size: 65px;
+    letter-spacing: 25px;
+}
 /*************************
 ********* About Us Page CSS ******
 **************************/
@@ -1768,7 +1777,15 @@ color: #fff;
     height: auto;
 }
 
-#Success
+#Success-header {
+    background-image:url("../images/success_edited.jpg");
+}
+
+#Success-header h1 {
+    color: #fff;
+    font-size: 65px;
+    letter-spacing: 25px;
+}
 
 #Success img{
   width: 150px;
